; ModuleID = '/home/carl/AnghaBench/openssl/crypto/asn1/extr_tasn_scn.c_ASN1_SCTX_new.c'
source_filename = "/home/carl/AnghaBench/openssl/crypto/asn1/extr_tasn_scn.c_ASN1_SCTX_new.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i32 (%struct.TYPE_5__*)* }

@ASN1_F_ASN1_SCTX_NEW = common dso_local global i32 0, align 4
@ERR_R_MALLOC_FAILURE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.TYPE_5__* @ASN1_SCTX_new(i32 (%struct.TYPE_5__*)* %0) #0 {
  %2 = alloca %struct.TYPE_5__*, align 8
  %3 = alloca i32 (%struct.TYPE_5__*)*, align 8
  %4 = alloca %struct.TYPE_5__*, align 8
  store i32 (%struct.TYPE_5__*)* %0, i32 (%struct.TYPE_5__*)** %3, align 8
  %5 = call %struct.TYPE_5__* @OPENSSL_zalloc(i32 8)
  store %struct.TYPE_5__* %5, %struct.TYPE_5__** %4, align 8
  %6 = load %struct.TYPE_5__*, %struct.TYPE_5__** %4, align 8
  %7 = icmp eq %struct.TYPE_5__* %6, null
  br i1 %7, label %8, label %12

8:                                                ; preds = %1
  %9 = load i32, i32* @ASN1_F_ASN1_SCTX_NEW, align 4
  %10 = load i32, i32* @ERR_R_MALLOC_FAILURE, align 4
  %11 = call i32 @ASN1err(i32 %9, i32 %10)
  store %struct.TYPE_5__* null, %struct.TYPE_5__** %2, align 8
  br label %17

12:                                               ; preds = %1
  %13 = load i32 (%struct.TYPE_5__*)*, i32 (%struct.TYPE_5__*)** %3, align 8
  %14 = load %struct.TYPE_5__*, %struct.TYPE_5__** %4, align 8
  %15 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %14, i32 0, i32 0
  store i32 (%struct.TYPE_5__*)* %13, i32 (%struct.TYPE_5__*)** %15, align 8
  %16 = load %struct.TYPE_5__*, %struct.TYPE_5__** %4, align 8
  store %struct.TYPE_5__* %16, %struct.TYPE_5__** %2, align 8
  br label %17

17:                                               ; preds = %12, %8
  %18 = load %struct.TYPE_5__*, %struct.TYPE_5__** %2, align 8
  ret %struct.TYPE_5__* %18
}

declare dso_local %struct.TYPE_5__* @OPENSSL_zalloc(i32) #1

declare dso_local i32 @ASN1err(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
